# semver

./: .gitignore  .gitlab-ci.yml  .semver  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  semver.yml
docs/: index.md
docs/config/: create_release.md  index.md
docs/config/file_replacers/: json.md  sed.md  toml.md  yaml.md
docs/config/replace_files/: json.md  sed.md  toml.md  yaml.md
src/pagekey_semver/: __init__.py  changelog.py  changelog_writer.py  cli.py  config.py  file_replacer.py  git.py  lib.py  main.py  models.py  release.py  replace_file.py
src/pagekey_semver/file_replacer/: __init__.py  base.py  json.py  sed.py  toml.py  yaml.py
src/pagekey_semver/git/: __init__.py  effector.py  manager.py  querier.py
src/pagekey_semver/integrations/: github.py  gitlab.py  release_creator.py
src/pagekey_semver/replace_file/: base.py  json.py  sed.py  toml.py  yaml.py
src/pagekey_semver/util/: __init__.py  command_runner.py  dynamic_import.py  env_to_dict.py  update_dict.py  variable_parser.py
tests/: test_cli.py  test_lib.py
tests/integration/: __init__.py  test_add_tag.py  test_apply.py
tests/unit/: __init__.py  test_changelog.py  test_changelog_writer.py  test_cli.py  test_config.py  test_dynamic_import.py  test_file_replacer.py  test_git.py  test_lib.py  test_release.py
tests/unit/file_replacer/: test_json.py  test_sed.py  test_toml.py  test_yaml.py
tests/unit/git/: __init__.py  test_effector.py  test_manager.py  test_querier.py
tests/unit/integrations/: __init__.py  test_github.py  test_gitlab.py  test_release_creator.py
tests/unit/replace_file/: test_json.py  test_sed.py  test_toml.py  test_yaml.py
(+10 files in other folders)
