[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pagekey-semver"
description = "Simple, opinionated semantic versioning package."
version = "0.1.15"
authors = [
    "steve"
]

[tool.poetry.scripts]
pagekey-semver = "pagekey_semver.cli:cli_entrypoint"

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
