[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pagekey-semver"
description = "Simple, opinionated semantic versioning package."
version = "0.3.31"
authors = [ "steve",]
readme = "README.md"

[tool.poetry.scripts]
pagekey-semver = "pagekey_semver.cli:cli_entrypoint"

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
toml = "^0.10.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
