[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pagekey-semver"
description = "Simple, opinionated semantic versioning package."
version = "2.0.1"
authors = [ "steve",]
readme = "README.md"
[[tool.poetry.packages]]
include = "pagekey_semver"
from = "src"

[tool.poetry.scripts]
pagekey-semver = "pagekey_semver.cli:cli_entrypoint"

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "^2.9.1"
pyyaml = "^6.0.1"
toml = "^0.10.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
